# rust-starter-project

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  logger.rs  main.rs
src/http/: error.rs  mod.rs
src/http/models/: mod.rs
src/http/services/: mod.rs
src/http/views/: mod.rs
