[package]
name = "starter"
version = "0.1.0"
authors = ["David Stanley <davidstanley01@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["tower-log"] }
axum-extra = "0.9.4"
axum-prometheus = "0.7.0"
axum-valid = "0.20.0"
backtrace = "0.3.74"
base64 = "0.22.1"
bit-set = "0.8.0"
clap = { version = "4.5.20", features = ["derive","env"] }
csv = "1.3.0"
dotenvy = "0.15.7"
http-body = "1.0.1"
lazy_static = "1.5.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "any", "derive", "macros", "migrate", "uuid", "chrono", "json"] }
sqlx-cli = "0.8.2"
thiserror = "1.0.65"
time = "0.3.36"
tokio = { version = "1.41.0", featurs = ["full"] }
tower = { version = "0.5.1", features = ["buffer", "limit", "timeout"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
